--- a/operators.qmd
+++ b/operators.qmd
@@ -56,7 +56,7 @@ The order of operation here is division, `14 / 7 = 2`, followed by multiplicatio
 Notice the spaces between numbers in arithmetic operations. While not required, spacing makes the code more readable. Don't be surprised that a lot of times you would try to figure out what you have done and also why you did particular thing. Also, if you work with in a team or want to share your work, people will be reading your codes.
 :::
 
-## Comparison Operators
+## Comparison Operators {##sec-comp-op}
 
 Comparison operators are as their names imply. They are used to compare values. The result from their operation is either TRUE or FALSE. TRUE and FALSE are logical value. You will get more information on this when we get to @sec-data-types in the next chapter.
 
@@ -134,7 +134,7 @@ You can also use parentheses to enclose conditions when testing multiple conditi
 (20 < 15) | (30 > 10)
 ```
 
-## Assignment Operators {#sec-assign}
+## Assignment Operators {#sec-ass}
 
 The assignment operator is used to bind values to names called *variables*. Variables are names that are used to reference values.
 
