--- a/r-rstudio.qmd
+++ b/r-rstudio.qmd
@@ -64,7 +64,7 @@ The four components/panes shown in @fig-rstudio-environment are:
 
 ![Console window](images/console.png)
 
-3.  **Environment / History Pane**: Located in the top-right. It includes the **Environment** pane which displays all objects created during a session, such as data and variables. We also have the **History** pane which stores the history of commands executed. This pane allows you to select previous commands and rerun them or add them back to console if you want. Located closely to **Histor** pane is the **Connection** pane which helps you interact with and manage connections to external data sources, such as databases, cloud services, or remote data systems. It provides a user-friendly interface for establishing and managing these connections directly from RStudio, without needing to write extensive code. After this is the **Tutorial** pane provides additional learning materials for R and RStudio. It is designed to be an interactive R tutorial.
+3.  **Environment / History Pane**: Located in the top-right. It includes the **Environment** pane which displays all objects created during a session, such as data and variables. We also have the **History** pane which stores the history of commands executed. This pane allows you to select previous commands and rerun them or add them back to console if you want. Located closely to **History** pane is the **Connection** pane which helps you interact with and manage connections to external data sources, such as databases, cloud services, or remote data systems. It provides a user-friendly interface for establishing and managing these connections directly from RStudio, without needing to write extensive code. After this is the **Tutorial** pane provides additional learning materials for R and RStudio. It is designed to be an interactive R tutorial.
 
 ::: {.callout-note appearance="simple"}
 An R session refers to the instance of R that is currently running, which includes everything that is active in memory and the state of your environment in RStudio or any R interface.
@@ -72,7 +72,7 @@ An R session refers to the instance of R that is currently running, which includ
 
 ![Environment window](images/environment_pane.png)
 
-4 **Files / Plots / Packages / Help / Viewer Window**: This is located in the bottom-right and it consists of the **Files** pane which shows files and folders in your working directory. This pane also include tools for renaming, deleting, creating, copying and moving files and folders in your computer. Next is the **Plots** pane which displays visualizations. You can also export, zoom in or out, and copy to your clipboard the visuals created in this pane. The **Packages** pane follows closely and it helps to manage packages you have. It can also be used for updating old packages as well as installing new packages. Next is the **Help** pane which shows the documentation of packages different functions. This documentation include examples which can help understand the usage of the functions. Lastly, we have the **Viewer** pane which is used to display a variety of visual outputs including interactive web content, plots, maps, and web-based applications.
+4.  **Files / Plots / Packages / Help / Viewer Window**: This is located in the bottom-right and it consists of the **Files** pane which shows files and folders in your working directory. This pane also include tools for renaming, deleting, creating, copying and moving files and folders in your computer. Next is the **Plots** pane which displays visualizations. You can also export, zoom in or out, and copy to your clipboard the visuals created in this pane. The **Packages** pane follows closely and it helps to manage packages you have. It can also be used for updating old packages as well as installing new packages. Next is the **Help** pane which shows the documentation of packages different functions. This documentation include examples which can help understand the usage of the functions. Lastly, we have the **Viewer** pane which is used to display a variety of visual outputs including interactive web content, plots, maps, and web-based applications.
 
 ![Files window](images/file_pane.png)
 
